--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@
   color: white;
   padding: 0.5rem;
   margin: 0.5rem 0 1rem;
+  border-radius: 3px;
 }
 
 .success {
-  background-color: greenyellow;
+  background-color: green;
 }
 
 .error {
