--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
+body {
+  background-color: #f9f9f9;
+}
+
 .success, .error {
   color: white;
   padding: 0.5rem;
   margin: 0.5rem 0 1rem;
   border-radius: 3px;
+  opacity: 0.7;
 }
 
 .success {
@@ -15,4 +20,8 @@
 
 button {
   background-color: lightgrey;
+}
+
+i.fas {
+  cursor: pointer;
 }
