--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 body {
-  background-color: #f9f9f9;
+  background-color: #f5f5f5;
+  color: #40514e;
+}
+
+h1, h6 {
+  text-align: center;
 }
 
 .success, .error {
@@ -15,7 +20,7 @@ body {
 }
 
 .error {
-  background-color: red;
+  background-color: #cb3737;
 }
 
 button {
